--- a/index.html
+++ b/index.html
@@ -18,12 +18,119 @@
     <header>
         <h1 class="bg-danger text-center">Now we crteate a Panda Commerce landing page </h1>
 
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <div class="container">
+                <a class="navbar-brand" href="#">
+                    <img src="images/logo.png" alt="" srcset="" width="164px" height="28px">
+                </a>
+
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="#">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Shoes</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Backpak</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Sbuscribe</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+
+        <!-- Image Slider  -->
+        <section class="container ">
+            <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                    <!-- TV -->
+                </div>
+                <div class="carousel-item active">
+                    <div class="row bg-info bg-gradient rounded d-flex align-items-center">
+                        <div class="col-lg-7">
+                            <h1>Mega LCD TV For Sports</h1>
+                            <p>
+                                This is the best tv in the world for people who just want to waste time in front of tv.
+                            </p>
+                            <h1>$1200</h1>
+                            <button>Buy NOw</button>
+                        </div>
+
+                        <div class="col-lg-5 ">
+                            <img src="images/banner-images/tv.png" class="d-block w-100" alt="...">
+                        </div>
+
+                    </div>
+                </div>
+                <!-- Headphone  -->
+                <div class="carousel-item">
+                    <div class="row bg-info bg-gradient rounded d-flex align-items-center">
+                        <div class="col-lg-7">
+                            <h1>Mega LCD TV For Sports</h1>
+                            <p>
+                                This is the best tv in the world for people who just want to waste time in front of tv.
+                            </p>
+                            <h1>$1200</h1>
+                            <button>Buy NOw</button>
+                        </div>
+
+                        <div class="col-lg-5 ">
+                            <img src="images/banner-images/headphone.png" class="d-block w-100" alt="...">
+                        </div>
+
+                    </div>
+                </div>
+                <!-- X Box -->
+                <div class="carousel-item">
+                    <div class="row bg-info bg-gradient rounded d-flex align-items-center">
+                        <div class="col-lg-7">
+                            <h1>Mega LCD TV For Sports</h1>
+                            <p>
+                                This is the best tv in the world for people who just want to waste time in front of tv.
+                            </p>
+                            <h1>$1200</h1>
+                            <button>Buy NOw</button>
+                        </div>
+
+                        <div class="col-lg-5 ">
+                            <img src="images/banner-images/xbox.png" class="d-block w-100" alt="...">
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
+                data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
+                data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
+            </div>
+        </section>
+
     </header>
 
     <!-- Main Start  -->
     <main>
 
     </main>
+
+    <footer>
+
+    </footer>
 
     <!-- bootstrap cdn bundle script  -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
