--- a/index.html
+++ b/index.html
@@ -48,76 +48,79 @@
         </nav>
 
         <!-- Image Slider  -->
+
         <section class="container ">
             <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
                     <!-- TV -->
-                </div>
-                <div class="carousel-item active">
-                    <div class="row bg-info bg-gradient rounded d-flex align-items-center">
-                        <div class="col-lg-7">
-                            <h1>Mega LCD TV For Sports</h1>
-                            <p>
-                                This is the best tv in the world for people who just want to waste time in front of tv.
-                            </p>
-                            <h1>$1200</h1>
-                            <button>Buy NOw</button>
-                        </div>
+                    <div class="carousel-item active">
+                        <div class="row bg-info bg-gradient rounded d-flex align-items-center">
+                            <div class="col-lg-7">
+                                <h1>Mega LCD TV For Sports</h1>
+                                <p>
+                                    This is the best tv in the world for people who just want to waste time in front of
+                                    tv.
+                                </p>
+                                <h1>$1200</h1>
+                                <button>Buy NOw</button>
+                            </div>
 
-                        <div class="col-lg-5 ">
-                            <img src="images/banner-images/tv.png" class="d-block w-100" alt="...">
-                        </div>
+                            <div class="col-lg-5 ">
+                                <img src="images/banner-images/tv.png" class="d-block w-100" alt="...">
+                            </div>
 
+                        </div>
+                    </div>
+                    <!-- Headphone  -->
+                    <div class="carousel-item">
+                        <div class="row bg-info bg-gradient rounded d-flex align-items-center">
+                            <div class="col-lg-7">
+                                <h1>Mega LCD TV For Sports</h1>
+                                <p>
+                                    This is the best tv in the world for people who just want to waste time in front of
+                                    tv.
+                                </p>
+                                <h1>$1200</h1>
+                                <button>Buy NOw</button>
+                            </div>
+
+                            <div class="col-lg-5 ">
+                                <img src="images/banner-images/headphone.png" class="d-block w-100" alt="...">
+                            </div>
+
+                        </div>
+                    </div>
+                    <!-- X Box -->
+                    <div class="carousel-item">
+                        <div class="row bg-info bg-gradient rounded d-flex align-items-center">
+                            <div class="col-lg-7">
+                                <h1>Mega LCD TV For Sports</h1>
+                                <p>
+                                    This is the best tv in the world for people who just want to waste time in front of
+                                    tv.
+                                </p>
+                                <h1>$1200</h1>
+                                <button>Buy NOw</button>
+                            </div>
+
+                            <div class="col-lg-5 ">
+                                <img src="images/banner-images/xbox.png" class="d-block w-100" alt="...">
+                            </div>
+
+                        </div>
                     </div>
                 </div>
-                <!-- Headphone  -->
-                <div class="carousel-item">
-                    <div class="row bg-info bg-gradient rounded d-flex align-items-center">
-                        <div class="col-lg-7">
-                            <h1>Mega LCD TV For Sports</h1>
-                            <p>
-                                This is the best tv in the world for people who just want to waste time in front of tv.
-                            </p>
-                            <h1>$1200</h1>
-                            <button>Buy NOw</button>
-                        </div>
 
-                        <div class="col-lg-5 ">
-                            <img src="images/banner-images/headphone.png" class="d-block w-100" alt="...">
-                        </div>
-
-                    </div>
-                </div>
-                <!-- X Box -->
-                <div class="carousel-item">
-                    <div class="row bg-info bg-gradient rounded d-flex align-items-center">
-                        <div class="col-lg-7">
-                            <h1>Mega LCD TV For Sports</h1>
-                            <p>
-                                This is the best tv in the world for people who just want to waste time in front of tv.
-                            </p>
-                            <h1>$1200</h1>
-                            <button>Buy NOw</button>
-                        </div>
-
-                        <div class="col-lg-5 ">
-                            <img src="images/banner-images/xbox.png" class="d-block w-100" alt="...">
-                        </div>
-
-                    </div>
-                </div>
-            </div>
-
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
-                data-bs-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
-                data-bs-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Next</span>
-            </button>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
+                    data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
+                    data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
             </div>
         </section>
 
@@ -125,7 +128,9 @@
 
     <!-- Main Start  -->
     <main>
-
+        <section class="conainer">
+            <h1>Alhamdulillah My Allah lots of love you . </h1>
+        </section>
     </main>
 
     <footer>
