--- a/index.html
+++ b/index.html
@@ -128,8 +128,19 @@
 
     <!-- Main Start  -->
     <main>
-        <section class="conainer">
-            <h1>Alhamdulillah My Allah lots of love you . </h1>
+        <!-- catagorise  -->
+        <section class="container">
+            <div class="row g-2">
+                <div class="col-lg-4">
+                    <div class="p-3 border bg-light">Watch</div>
+                </div>
+                <div class="col-lg-4">
+                    <div class="p-3 border bg-light">Bag</div>
+                </div>
+                <div class="col-lg-4">
+                    <div class="p-3 border bg-light">Shoes</div>
+                </div>
+            </div>
         </section>
     </main>
 
