--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 <body>
     <!-- Header start -->
     <header>
-        <h1 class="bg-danger text-center">Now we crteate a Panda Commerce landing page </h1>
-
+        <h1 class="bg-danger text-center mx-5">Now we crteate a Panda Commerce landing page </h1>
+        <!-------------- Nav menu  ------------->
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container">
                 <a class="navbar-brand" href="#">
@@ -47,14 +47,13 @@
             </div>
         </nav>
 
-        <!-- Image Slider  -->
-
+        <!-- --------Image Slider -------------- -->
         <section class="container ">
             <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
-                <div class="carousel-inner">
+                <div class="carousel-inner ">
                     <!-- TV -->
-                    <div class="carousel-item active">
-                        <div class="row bg-info bg-gradient rounded d-flex align-items-center">
+                    <div class="carousel-item active ">
+                        <div class="row bg-info bg-gradient rounded d-flex align-items-center p-5">
                             <div class="col-lg-7">
                                 <h1>Mega LCD TV For Sports</h1>
                                 <p>
@@ -73,7 +72,7 @@
                     </div>
                     <!-- Headphone  -->
                     <div class="carousel-item">
-                        <div class="row bg-info bg-gradient rounded d-flex align-items-center">
+                        <div class="row bg-info bg-gradient rounded d-flex align-items-center p-5">
                             <div class="col-lg-7">
                                 <h1>Mega LCD TV For Sports</h1>
                                 <p>
@@ -92,7 +91,7 @@
                     </div>
                     <!-- X Box -->
                     <div class="carousel-item">
-                        <div class="row bg-info bg-gradient rounded d-flex align-items-center">
+                        <div class="row bg-info bg-gradient rounded d-flex align-items-center p-5">
                             <div class="col-lg-7">
                                 <h1>Mega LCD TV For Sports</h1>
                                 <p>
@@ -129,16 +128,25 @@
     <!-- Main Start  -->
     <main>
         <!-- catagorise  -->
-        <section class="container">
-            <div class="row g-2">
+        <section class="container my-5">
+            <div class="row g-4">
                 <div class="col-lg-4">
-                    <div class="p-3 border bg-light">Watch</div>
+                    <div class="p-3 border bg-warning d-flex align-items-center justify-content-between rounded-3">
+                        <h1 class="text-white ">Watch</h1>
+                        <img height="100px" width="100px" src="images/categories/watch.png" alt="" srcset="">
+                    </div>
                 </div>
                 <div class="col-lg-4">
-                    <div class="p-3 border bg-light">Bag</div>
+                    <div class="p-3 border bg-success d-flex align-items-center justify-content-between rounded-3">
+                        <h1 class="text-white">Bag<h1>
+                                <img height="100px" width="100px" src="images/categories/bag.png" alt="" srcset="">
+                    </div>
                 </div>
                 <div class="col-lg-4">
-                    <div class="p-3 border bg-light">Shoes</div>
+                    <div class="p-3 border bg-secondary d-flex align-items-center justify-content-between rounded-3">
+                        <h1 class="text-white">Shoes</h1>
+                        <img height="100px" width="100px" src="images/categories/shoes.png" alt="" srcset="">
+                    </div>
                 </div>
             </div>
         </section>
