--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
+    <!-- Custom Style Css  -->
+    <link rel="stylesheet" href="custom-style.css">
+
 </head>
 
 <body>
@@ -18,7 +21,7 @@
     <header>
         <h1 class="bg-danger text-center mx-5">Now we crteate a Panda Commerce landing page </h1>
         <!-------------- Nav menu  ------------->
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top ">
             <div class="container">
                 <a class="navbar-brand" href="#">
                     <img src="images/logo.png" alt="" srcset="" width="164px" height="28px">
@@ -34,13 +37,13 @@
                             <a class="nav-link active" aria-current="page" href="#">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Shoes</a>
+                            <a class="nav-link" href="#shoes">Shoes</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Backpak</a>
+                            <a class="nav-link" href="#backpak">Backpak</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Sbuscribe</a>
+                            <a class="nav-link" href="#sub">Sbuscribe</a>
                         </li>
                     </ul>
                 </div>
@@ -53,7 +56,7 @@
                 <div class="carousel-inner ">
                     <!-- TV -->
                     <div class="carousel-item active ">
-                        <div class="row bg-info bg-gradient rounded d-flex align-items-center p-5">
+                        <div class="row bg-color bg-gradient rounded d-flex align-items-center p-5">
                             <div class="col-lg-7">
                                 <h1>Mega LCD TV For Sports</h1>
                                 <p>
@@ -61,7 +64,7 @@
                                     tv.
                                 </p>
                                 <h1>$1200</h1>
-                                <button>Buy NOw</button>
+                                <button class="btn-buy-now">Buy NOw</button>
                             </div>
 
                             <div class="col-lg-5 ">
@@ -72,7 +75,7 @@
                     </div>
                     <!-- Headphone  -->
                     <div class="carousel-item">
-                        <div class="row bg-info bg-gradient rounded d-flex align-items-center p-5">
+                        <div class="row bg-color bg-gradient rounded d-flex align-items-center p-5">
                             <div class="col-lg-7">
                                 <h1>Mega LCD TV For Sports</h1>
                                 <p>
@@ -80,7 +83,7 @@
                                     tv.
                                 </p>
                                 <h1>$1200</h1>
-                                <button>Buy NOw</button>
+                                <button class="btn-buy-now">Buy NOw</button>
                             </div>
 
                             <div class="col-lg-5 ">
@@ -91,7 +94,7 @@
                     </div>
                     <!-- X Box -->
                     <div class="carousel-item">
-                        <div class="row bg-info bg-gradient rounded d-flex align-items-center p-5">
+                        <div class="row bg-color bg-gradient rounded d-flex align-items-center p-5">
                             <div class="col-lg-7">
                                 <h1>Mega LCD TV For Sports</h1>
                                 <p>
@@ -99,7 +102,7 @@
                                     tv.
                                 </p>
                                 <h1>$1200</h1>
-                                <button>Buy NOw</button>
+                                <button class="btn-buy-now">Buy NOw</button>
                             </div>
 
                             <div class="col-lg-5 ">
@@ -150,10 +153,131 @@
                 </div>
             </div>
         </section>
+
+        <!-- Shoes Section  -->
+        <section class="container" id="shoes">
+            <h2>Shoes</h2>
+            <div class="row row-cols-1 row-cols-md-3 g-4">
+
+                <div class="col">
+                    <div class="card h-100 border-0 shadow">
+                        <img src="images/shoes/shoe-1.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Supply 350</h5>
+                            <p class="card-text">This is a longer card with supporting text below as a natural lead-in
+                                to additional.</p>
+                            <h4>$120</h4>
+                        </div>
+                        <div class="m-3">
+                            <button class="btn-buy-now">Buy Now </button>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col">
+                    <div class="card h-100 border-0 shadow">
+                        <img src="images/shoes/shoe-2.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Nike 360</h5>
+                            <p class="card-text">This card has supporting text below as a natural lead-in to additional
+                                content.</p>
+                            <h4>$320</h4>
+                        </div>
+                        <div class="m-3">
+                            <button class="btn-buy-now">Buy Now </button>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col">
+                    <div class="card h-100 border-0 shadow ">
+                        <img src="images/shoes/shoe-3.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Red Airmax</h5>
+                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                                additional.</p>
+                            <h4>$350</h4>
+                        </div>
+                        <div class="m-3">
+                            <button class="btn-buy-now">Buy Now </button>
+                        </div>
+                    </div>
+                </div>
+
+
+            </div>
+        </section>
+
+        <!-- Backpak Section  -->
+        <section class="container my-5" id="backpak">
+            <h2 class="mt-5">Backpak</h2>
+            <div class="row row-cols-1 row-cols-md-3 g-4">
+
+                <div class="col">
+                    <div class="card h-100 border-0 shadow ">
+                        <img src="images/bags/bag-1.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Bag Laltu</h5>
+                            <h4>$350</h4>
+                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                                additional content. This content is a little bit longer.</p>
+                        </div>
+                        <div class="m-3">
+                            <button class="btn-buy-now">Buy Now </button>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col">
+                    <div class="card h-100 border-0 shadow ">
+                        <img src="images/bags/bag-2.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Blue Niltu Bag</h5>
+                            <h4>$320</h4>
+                            <p class="card-text">This card has supporting text below as a natural lead-in to additional
+                                content.</p>
+
+                        </div>
+                        <div class="m-3">
+                            <button class="btn-buy-now">Buy Now </button>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col">
+                    <div class="card h-100 border-0 shadow ">
+                        <img src="images/bags/bag-3.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Black Kaltu Bag</h5>
+                            <h4>$169</h4>
+                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                                additional content. This card has even longer content than the first to show that equal
+                                height action.</p>
+
+                        </div>
+                        <div class="m-3">
+                            <button class="btn-buy-now">Buy Now </button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Sbuscribe  -->
+        <section style="height: 300px; background-color: #fceae8;"
+            class="container d-flex justify-content-center align-items-center" id="sub">
+            <div>
+                <h1>LET'S STAY IN TOUCH</h1>
+                <p>Get updates on sales, specials and more</p>
+                <input class="form-control" type="text" placeholder="Your Email">
+                <br>
+                <button class="btn-buy-now">sumit</button>
+            </div>
+        </section>
     </main>
 
-    <footer>
-
+    <footer class="mt-5 text-center">
+        <small>©2021. Panda Commerce. All rights reserved. Ilhan Khondaker, Bangladesh.</small>
     </footer>
 
     <!-- bootstrap cdn bundle script  -->
